# nudging-tool

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  demo-test.http  docker-compose.yaml  dump.yaml  pyproject.toml  requirements.txt  skaffold.yaml  taskfile.yaml
.github/workflows/: release.yaml  update-docs.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  24f5a9d7a3c1_add_rule_scenarios.py  3c4f4a2e7d9b_add_rule_overrides.py  73a5308230a8_.py  7fc90f29e970_initial.py  8a2a854458f2_init.py  9f6b3f3d0b51_add_scheduled_events.py  bf5f5ec8a1d1_add_notification_click_tracking.py
api/: main.py
api/routes/: ingest.py  webpush.py
config/: settings.py
db/: init_db.py  models.py  seed_db.py  session.py
db/seed/: templates.yaml
docs/: api-reference.md  architecture.md  development.md  engine.md
engine/: engine_service.py
engine/rules/: contract.py
engine/templates/: renderer.py
orchestrator/: orchestrator.py  preferences.py
publishers/: base.py  registry.py
publishers/web/: worker.py
seed/: active_kinds.yaml  rules.yaml
seed/preferences/: default.yaml
seed/rules/: autumn.yaml  bill_down_monthly_v1.yaml  bill_up_monthly_rootcause_v1.yaml  bill_up_monthly_v1.yaml  botanswer.yaml  contract_renewal_info_v1.yaml  exported_energy_info_monthly_v1.yaml  extr_event.yaml  form.yaml  generation_down_monthly_not_radiation_v1.yaml  generation_down_monthly_v1.yaml  generation_min_down_two_weeks_not_radiation_v1.yaml  imported_down.yaml  imported_energy_info_monthly_v1.yaml  imported_up.yaml  inverter_error_critical_daily_v1.yaml  inverter_error_minor_weekly_v1.yaml  maintenance_scheduled_info_v1.yaml  price_down.yaml  price_up.yaml  price_up_weekly_v1.yaml  selfcons_down_monthly_v1.yaml  selfcons_down_weekly_v1.yaml  specific_yield_low_two_weeks_v1.yaml  spring.yaml  summer.yaml  survey.yaml  (+5 more)
(+280 files in other folders)
