[project]
name = "celine-nudging"
version = "0.1.0"
description = "CELINE Nudging tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "asgi-lifespan>=2.1.0",
  "asyncpg[binary]>=0.31.0",
  "celine-sdk>=1.1.0",
  "fastapi>=0.129.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.0",
  "python-dotenv>=1.2.1",
  "pywebpush>=2.3.0",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.46",
  "typer>=0.23.1",
  "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["celine.nudging*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true

[tool.uv]

[dependency-groups]
dev = [
  "python-semantic-release>=10.5.3",
  "ruff>=0.12.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28.1",
  "debugpy>=1.8.19",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
commit_parser = "conventional"

upload_to_release = false
upload_to_pypi = false
commit_version_number = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "up"]
parse_squash_commits = true
ignore_merge_commits = true


[project.scripts]
nudging-cli = "celine.nudging.cli.main:create_app"